<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_massrobotics</name>
  <version>0.0.1</version>
  <description>Package containing launch files for RMF Massrobotics integration.</description>
  <maintainer email="aaron@openrobotics.org">Aaron</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmf_massrobotics_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
