<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_massrobotics_bridge</name>
  <version>0.0.1</version>
  <description>Bridges between RMF and Massrobotics interop standard.</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_traffic</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>rmf_visualization_schedule</depend>
  <depend>rclcpp</depend>
  <depend>libwebsocketpp-dev</depend>
  <depend>libssl-dev</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
